# smartconsole

./: .gitignore  Cargo.toml  README.md  flake.nix  rustfmt.toml
cli/: Cargo.toml
cli/src/: main.rs
libpam/: Cargo.toml
libpam/src/: lib.rs
