[package]
name = "smccli"
version = "0.1.0"
edition = "2021"

[dependencies]
arboard = "3"
clap = { version = "3", features = ["derive"] }
image = "0"
zbar-rust = "0"
base64 = { workspace = true }
crypto_box = { workspace = true }
qrcode = { workspace = true }
rand = { workspace = true }
thiserror = "1"
log = "0"
pretty_env_logger = "0"
once_cell = "1"
home = "0"
chrono = "0"